--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "axios": "0.21.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -60,7 +61,9 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "scss": "^0.2.4",
+    "sass-loader": "^11.0.1"
   },
   "engines": {
     "node": ">= 6.0.0",
