--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "vue": "^2.5.2",
-    "axios": "0.21.1"
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
